--- a/main.html
+++ b/main.html
@@ -4,10 +4,26 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Feedback Form</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for="name" >Name : </label>
+	<input id="name" min=3 maxlength=50><br>
+	<label for="portfolio" >Portfolio :</label>
+	<input id="portfolio" type="url"><br>
+	<label for="favColor" >Favourite-color</label>
+	<select id="favColor">
+		<option>default</option>
+		<option>RED</option>
+		<option>Blue</option>
+		<option>Green</option>
+		<option>Yellow</option>
+	</select><br>
+	<label for="likeness">Likeness of color</label>
+	<input type="range" min=1 max=100 value=1 id="likeness">
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
