--- a/main.html
+++ b/main.html
@@ -4,12 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<title>Feedback Form</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<label for="name" >Name : </label>
+	<h1>Feedback Form</h1>
+	<form><label for="name" >Name : </label>
 	<input id="name" min=3 maxlength=50><br>
 	<label for="portfolio" >Portfolio :</label>
 	<input id="portfolio" type="url"><br>
@@ -22,7 +22,7 @@
 		<option>Yellow</option>
 	</select><br>
 	<label for="likeness">Likeness of color</label>
-	<input type="range" min=1 max=100 value=1 id="likeness">
+	<input type="range" min=1 max=100 value=1 id="likeness"></form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
