--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
 	<form><label for="name" >Name : </label>
-	<input id="name" min=3 maxlength=50><br>
+	<input type="text" id="name" min=3 maxlength=50><br>
 	<label for="portfolio" >Portfolio :</label>
 	<input id="portfolio" type="url"><br>
 	<label for="favColor" >Favourite-color</label>
