--- a/main.html
+++ b/main.html
@@ -22,7 +22,8 @@
 		<option>Yellow</option>
 	</select><br>
 	<label for="likeness">Likeness of color</label>
-	<input type="range" min=1 max=100 value=1 id="likeness"></form>
+	<input type="range" min=1 max=100 value=1 id="likeness"><br>
+	<button>Submit</button></form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
