--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
-	<form><label for="name" >Name : </label>
-	<input type="text" id="name" min=3 maxlength=50><br>
+	<form method="get"><label for="name" >Name : </label>
+	<input type="text" id="name" minlength="3" maxlength=50><br>
 	<label for="portfolio" >Portfolio :</label>
 	<input id="portfolio" type="url"><br>
 	<label for="favColor" >Favourite-color</label>
@@ -22,7 +22,7 @@
 		<option>Yellow</option>
 	</select><br>
 	<label for="likeness">Likeness of color</label>
-	<input type="range" min=1 max=100 value=1 id="likeness"><br>
+	<input type="range" min="1" max="100" value=1 id="likeness"><br>
 	<button>Submit</button></form>
 	
     <script type="text/javascript" src="./script.js">
