--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
-	<form method="get"><label for="name" >Name : </label>
-	<input type="text" id="name" minlength="3" maxlength=50><br>
+	<form method="post"><label for="name" >Name : </label>
+	<input type="text" id="name" minlength="3" maxlength="50"><br>
 	<label for="portfolio" >Portfolio :</label>
 	<input id="portfolio" type="url"><br>
 	<label for="favColor" >Favourite-color</label>
