--- a/main.html
+++ b/main.html
@@ -14,13 +14,7 @@
 	<label for="portfolio" >Portfolio :</label>
 	<input id="portfolio" type="url"><br>
 	<label for="favColor" >Favourite-color</label>
-	<select id="favColor">
-		<option>default</option>
-		<option>RED</option>
-		<option>Blue</option>
-		<option>Green</option>
-		<option>Yellow</option>
-	</select><br>
+		<input type="color" id="favColor">
 	<label for="likeness">Likeness of color</label>
 	<input type="range" min="1" max="100" value=1 id="likeness"><br>
 	<button>Submit</button></form>
